tests/error/tracing_errors/input_mutate5@python313.err
Traceback (most recent call last):
  File "$FILE", line 27, in <module>
    module.compile()
    ~~~~~~~~~~~~~~^^
  File "$FILE", line 16, in foo
    del xs[0]
        ~~^^^
TypeError: List is immutable. Consider calling `copy()` to obtain a mutable copy of this list
